cleanup: remove .DS_Store and executable from repository
- Remove tracked .DS_Store and main executable files
- Add comprehensive macOS system files to .gitignore
- Add main executable to build artifacts ignore list
- Prevent future tracking of system and build files

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ banner.txt
 *.dll
 *.so
 *.dylib
+main
 
 # Test binary, built with `go test -c`
 *.test
@@ -25,4 +26,13 @@ go.work
 .idea/
 *.swp
 *.swo
-*~ 
+*~
+
+# macOS system files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db 
